# flask_blog

./: .flake8  .gitignore  README.md  app.py  init_db.py  main.py  pyproject.toml
blog/: app.py  config.py
blog/services/: blog_services.py
blog/templates/: about.html  base.html  edit.html  index.html  post.html
db_settings/: init_db.py
services/: blog_services.py  databese_services.py
templates/: base.html  create.html  edit.html  index.html
